--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "element-plus": "^2.2.26",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "normalize": "^0.3.1",
     "pinia": "^2.0.27",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
